# minipock_zephyr-demo

./: .pre-commit-config.yaml  .prettierc  CHANGELOG.md  README.md  west.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  release.yaml  zephyr_application.yaml
app/: fix_static_init_gnu.patch  fix_zest_core_stm32h753zi_ethernet.patch
app/base_application/: .clang-format  CMakeLists.txt  Kconfig  VERSION  prj.conf  sections-rom.ld  sysbuild.conf
app/base_application/boards/: zest_core_stm32h753zi.overlay  zest_core_stm32l4a6rg.overlay
app/base_application/drivers/: CMakeLists.txt  Kconfig
app/base_application/drivers/sensor/: CMakeLists.txt  Kconfig
app/base_application/drivers/sensor/hls-lfcd2/: CMakeLists.txt  Kconfig  hls-lfcd2.c  hls-lfcd2.h
app/base_application/include/: base_interface.h  common.h  flash_storage.h  micro_ros_node.h  paa5160e1_global.h  scan.h  update.h
app/base_application/src/: base_interface.c  flash_storage.c  main.c  micro_ros_node.c  minipock.proto  scan.c  sensor.c  settings_cmd.c  update.c  update_cmd.c  web_interface.c
app/base_application/src/static_web_resources/: index.html  main.js
app/base_application/sysbuild/: mcuboot.overlay
app/base_application/web/: index.html  script.js  style.css
app/lidar_example/: CMakeLists.txt  Kconfig  prj.conf
app/lidar_example/boards/: zest_core_stm32h753zi.overlay  zest_core_stm32l4a6rg.overlay
app/lidar_example/src/: main.c
drivers/sensor/: CMakeLists.txt
drivers/sensor/hls-lfcd2/: CMakeLists.txt  Kconfig  hls-lfcd2.c  hls-lfcd2.h
